<resources>
    <string name="app_name">Nöbetçi Eczane</string>
    <string name="pharmacy_on_duty">Nöbetçi Ecz.</string>
    <string name="all_pharmacies">Tüm Ecz.</string>
    <string name="now_here">Şu An Buradasınız</string>
    <string name="directions">Yol Tarifi Al</string>
    <string name="call">Ara</string>
    <string name="settings">Ayarlar</string>
    <string name="share">Paylaş</string>
    <string name="city">Şehir</string>
    <string name="districts">İlçe</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="language">Dil</string>
    <string name="english">Ingilizce</string>
    <string name="german">Almanca</string>
    <string name="french">Fransızca</string>
    <string name="arabic">Arapça</string>
    <string name="turkce">Türkçe</string>
    <string name="tema">Tema</string>
    <string name="dark_theme">Koyu Tema</string>
    <string name="light_theme">Aydınlık Tema</string>
    <string name="system_default">Sistem Varsayılanı</string>
    <string name="soon">Yakında</string>
    <string name="new_update">Yakında Yeni Güncellemeler ile Karşınızda</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="cancel">Kapat</string>
    <string name="save">Kaydet</string>
    <string name="list_banner">ca-app-pub-7856290377548275/9128936160</string>
    <string name="detail_sheet_banner">ca-app-pub-7856290377548275/4663324967</string>
    <string name="list_sheet_banner">ca-app-pub-7856290377548275/1012688712</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-7856290377548275/5765432109</string>
    <string name="interstitial_ad_unit_id_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="error">Hata</string>
    <string name="now_location_failed">Konumunuz Alınamıyor</string>
    <string name="not_found_pharmacy">Eczane Bulunamadı</string>
    <string name="try_again">Tekrar Deneyin</string>
    <string name="we_vote">Bizi Değerlendirin</string>
</resources>